--- a/css/style.css
+++ b/css/style.css
@@ -1874,12 +1874,13 @@ section[data-section="menu"] {
   color: #800080;
   margin: 0;
   padding: 0;
-  font-size: 80px;
+  font-size: 100px;
 }
 
 @media screen and (max-width: 768px) {
   .probootstrap-heading .primary-heading {
-    font-size: 70px;
+    font-size: 80px;
+    font-weight: 500;
   }
 }
 
